# retreivr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-runtime.md  README.md  SECURITY.md  archiver.py  config_gui.py  portainer.md  pyproject.toml  requirements.txt  setup_oauth.py
_project_management/: section3_checklist.md
api/: README.md  hostctl.py  intent_dispatcher.py  main.py  media_stream.py
benchmarks/: music_search_album_dataset.json  music_search_benchmark_gate.json  music_search_benchmark_report.py  music_search_benchmark_results.json  music_search_benchmark_runner.py
config/: config_sample.json  custom_search_adapters.example.yaml  settings.py
db/: __init__.py  downloaded_tracks.py  migrations.py  playlist_snapshots.py  saved_titles.py
docker/: Dockerfile  README.md  docker-compose.portainer.yml.example  docker-compose.yml.example
docs/: Spofity_Integration.md  initial-setup.md  intake_api.md  music_search_benchmark.md  musicbrainz.md  paths.md  portainer.md
download/: worker.py
engine/: __init__.py  arr_services.py  canonical_ids.py  community_cache.py  community_publish_backfill.py  community_publish_worker.py  core.py  import_m3u_builder.py  import_pipeline.py  job_queue.py  music_export.py  music_player.py  music_title_normalization.py  musicbrainz_binding.py  paths.py  resolution_api.py  resolution_auth.py  runtime.py  search_adapters.py  search_engine.py  search_scoring.py  (+2 more)
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: lib.rs
(+209 files in other folders)
