[package]
name = "retreivr-launcher"
version = "0.9.6"
description = "GUI launcher for Retreivr"
authors = ["github.com/Retreivr"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
